--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,7 +8,7 @@
 	"main": ".open-next/worker.js",
 	"compatibility_date": "2025-03-01",
 	"compatibility_flags": [
-		"nodejs_compat",
+		"nodejs_compat_v2",
 		"global_fetch_strictly_public"
 	],
 	"assets": {
