--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,16 +1,22 @@
 {
+  "r2_buckets": [
+    {
+      "binding": "NEXT_INC_CACHE_R2_BUCKET",
+      "bucket_name": "next-cache"
+    }
+  ],
   "durable_objects": {
     "bindings": [
       {
-        "name": "BUCKET_CACHE_PURGE",
-        "class_name": "BucketCachePurge",
-      },
-    ],
+        "name": "NEXT_CACHE_DO_QUEUE",
+        "class_name": "DOQueueHandler"
+      }
+    ]
   },
-  "migrations": [
+  "d1_databases": [
     {
-      "tag": "v1",
-      "new_sqlite_classes": ["BucketCachePurge"],
-    },
-  ],
+      "binding": "NEXT_TAG_CACHE_D1",
+      "database_name": "next-tags"
+    }
+  ]
 }
