Update environment configuration, adjust package versions, and enhance wrangler settings

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,4 @@
 
 # Backend API Base URL (server-side only - NOT exposed to client)
 API_BASE_URL=http://localhost:3001
-
-# Session Configuration
-SESSION_COOKIE_NAME=brritto_session
-SESSION_MAX_AGE=86400
+BLOG_API_URL=https://example.com/wp-json/wp/v2
